Set body width to 100%; hopefully fixing the horizontal scrollbar problem

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
   background-color: var(--primary);
   color: var(--dark-text);
 }
